# KrillReport

./: .env.example  .gitignore  README.md  config.example.yaml  pyproject.toml  requirements.txt
examples/: generate_demo.py  make_sample_template.py
examples/sample_inputs/: assessment_report.md  consultant_notes.txt  dynamic_results.md  host_inventory.csv  manual_findings.md  nessus_scan.nessus  nmap_scan.gnmap  nmap_scan.xml  redteam_findings.yaml  scanner_findings.json  structured_finding.md  web_findings.csv
krillreport/: __init__.py  __main__.py  config.py  logging_config.py  models.py  pipeline.py  utils.py
krillreport/api/: __init__.py  app.py
krillreport/cli/: __init__.py  main.py
krillreport/ingestion/: __init__.py  attachments.py  base.py  common.py  csv_parser.py  dispatcher.py  gnmap_parser.py  json_parser.py  markdown_parser.py  pdf_parser.py  report_document.py  structured_finding.py  text_extract.py  text_parser.py  xml_parser.py  yaml_parser.py
krillreport/llm_enhancer/: __init__.py  base.py  enhancer.py  prompts.py
krillreport/normalization/: __init__.py  normalizer.py  severity.py
krillreport/report_renderer/: __init__.py  docx_renderer.py  docx_template_renderer.py  docx_to_pdf.py  markdown_render.py  pdf_renderer.py  sanitize.py  (+1 more)
tests/: conftest.py  test_attachments.py  test_branding_extraction.py  test_correlation.py  test_custom_css.py  test_docx_to_pdf.py  test_gnmap.py  test_ingestion.py  test_markdown_render.py  test_models.py  test_pipeline.py  test_report_document.py  test_structured_finding.py  test_template_renderer.py  test_web_upload.py
(+18 files in other folders)
